# -Job-Parsing

./: hh.json  main.py  pyproject.toml  utils.py  vacancies.json
classes/: abstract_class.py  connector.py  hh.ru.py  job_parser_classes.py  superjob.py  vacancies.py
func/: func_parser.py  user_iteration.py  utils.py
