[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["DoctorLynch <doctor_linchenko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
